--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ P {
  </head>
  <p align="center"><big><big><big><big><big><big>8-Й "В" Класс</big></big></big></big></big></big></p>
  <body> 
-  <a href="https://8vlist.github.io/site/rasp" class="btn"><big>Рассписание</big></a>
-  <a href="https://8vlist.github.io/site/list" class="btn"><big>Журнал</big></a>
- </body>
+  <a href="https://8vlist.github.io/site.github.io/rasp" class="btn"><big>Рассписание</big></a>
+  <a href="https://8vlist.github.io/site.github.io/list" class="btn"><big>Журнал</big></a>
+  </body>
 </html>
